# BingATLASToolKit

./: README.md
ConfigFiles/: AthenaCommand.txt  CMakeLists.txt  HLT_2j250_j150_config.py  MC15.578287.MadGraphPythia8EvtGen_A14NNPDF23_y1bbbb.py  MadAnalysisCommand.txt  MadGraphCommand.txt  MadGraphControl_y1bbbb_LO.py  MadGraphRecipe.txt  README.MD
ConfigFiles/DMsimp_s_spin1/: CT_couplings.pyo  CT_vertices.pyo  __init__.pyo  coupling_orders.pyo  couplings.pyo  decays.pyo  function_library.pyo  lorentz.pyo  object_library.pyo  parameters.pyo  particles.pyo  propagators.pyo  vertices.py  vertices.pyo  write_param_card.pyo
python/: CDITxtToHist.py  FTAGDataChecker.py  NtupleCheck.py  event_loop.py  make2DPlot.py  makeKinePlots.py  makePlotMaster.py  menuFast.py  mergeMC.py  root_draw_python.py  weightMCSamples.py
scripts/: lxbatchRun.sh  lxbatchRunDigi.sh  lxbatchRunEXO.sh  lxbatchRunReco.sh  lxbatchRunSim.sh  lxbatchSub.sh  tablization.py
src/: FourJetsTopo.cpp  FourJetsTopo.h  README.MD
